Finished through part 31

--- a/website/music/templates/music/detail.html
+++ b/website/music/templates/music/detail.html
@@ -1,27 +1,16 @@
+{% extends 'music/base.html' %}
+
+{% block title %}{{album.album_title}}{% endblock %}
+{%block body%}
 <img src="{{album.album_logo}}">
 <h1>{{album.album_title}}</h1>
 <h2>{{album.artist}}</h2>
-<!--
-<ul>
-    {% for song in album.song_set.all%}
-        <li>{{song.song_title}}.{{song.file_type}}</li>
-    {%endfor%}
-</ul>
--->
-{%if error_message %}
-    <p><strong>{{error_message}}</strong></p>
-{%endif%}
+{% for song in album.song_set.all%}
+    {{song.song_title}}
+    {% if song.is_favorite %}
+        <img src="https://eneslow.com/media/wysiwyg/star-icon.png"/>
+    {% endif %}
+    <br>
+{%endfor%}
 
-<form action="{%url 'music:favorite' album.id%}" method="post">
-    {%csrf_token%}
-    {%for song in album.song_set.all %}
-        <input type="radio" id="song{{forloop.counter}}" name="song" value="{{song.id}}"/>
-        <label for="song{{forloop.counter}}">
-            {{song.song_title}}
-            {%if song.is_favorite%}
-                <img src="https://eneslow.com/media/wysiwyg/star-icon.png"/>
-            {%endif%}
-        </label><br>
-    {%endfor%}
-    <input type="submit" value="Favorite">
-</form>
+{% endblock %}
