--- a/website/music/static/music/css/styles.css
+++ b/website/music/static/music/css/styles.css
@@ -1,4 +1,9 @@
-a{
-    color:blue;
-    background: darkgrey;
+body{
+    background: gray;
+}
+.navbar{
+    border-radius: 0;
+}
+.navbar-brand{
+    font-family: 'Satisfy', cursive;
 }
