--- a/website/music/templates/music/detail.html
+++ b/website/music/templates/music/detail.html
@@ -2,7 +2,7 @@
 
 {% block title %}{{album.album_title}}{% endblock %}
 {%block body%}
-<img src="{{album.album_logo}}">
+<img src="{{album.album_logo.url}}">
 <h1>{{album.album_title}}</h1>
 <h2>{{album.artist}}</h2>
 {% for song in album.song_set.all%}
